[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/DialogBox.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/hunter_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/leo_sound.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scripts/TalkSound.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ChoicePanel.gd" type="Script" id=5]
[ext_resource path="res://Assets/select_sound.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/ff.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Close"
length = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("DialogPanel/ChoicePanel:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -58.7, -34 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DialogPanel/ChoicePanel:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 24, -34.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DialogPanel/ChoicePanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.03 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("DialogPanel/ChoicePanel:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -34, -58.7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DialogPanel/ChoicePanel:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -34.0, 24 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DialogPanel/ChoicePanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="DialogBox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DialogPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -117.0
margin_right = -11.0
margin_bottom = -6.0
rect_min_size = Vector2( 24, 24 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="DialogPanel"]
anchor_top = -0.0165848
anchor_right = 1.0
anchor_bottom = 0.983415
margin_left = 24.0
margin_top = 19.8409
margin_right = -19.0
margin_bottom = -11.1591
bbcode_enabled = true
text = "Test Text
Line 2
Line 3"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ChoicePanel" type="Panel" parent="DialogPanel"]
visible = false
anchor_top = -0.25
anchor_bottom = -0.25
margin_top = -34.0
margin_right = 142.0
margin_bottom = -34.0
rect_min_size = Vector2( 24, 24 )
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="DialogPanel/ChoicePanel"]
anchor_top = -0.0165848
anchor_right = 1.0
anchor_bottom = 0.983415
margin_left = 24.0
margin_top = 19.3765
margin_right = -20.0
margin_bottom = -18.6234
bbcode_enabled = true
text = "Test Text
Line 2
Line 3"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SelectSound" type="AudioStreamPlayer" parent="DialogPanel/ChoicePanel"]
stream = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="TalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
script = ExtResource( 4 )

[node name="DialogBoxEffects" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 1 )
anims/Open = SubResource( 2 )

[node name="FastForward" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 617.862, 422.917 )
texture = ExtResource( 7 )

[connection signal="dialogPaused" from="." to="TalkSound" method="_when_text_ends"]
[connection signal="dialogPlaying" from="." to="TalkSound" method="_while_text_playing"]
